src/components/common/maps/map.less
@import (reference) '../../constants';
@import (reference) '../../general';


.box-shadow() {
  box-shadow: 0 0 3px black;
}

.map-container {
  height: 300px;
  background-color: @map-background;

  @media (max-width: (@medium-viewport - 1)) and (orientation: landscape) {
    margin: (@row-height * 0.3) (@row-height * 1.5);
  }

  &.x-full-screen {
    @media (max-width: (@medium-viewport - 1)) {
      height: 100%;
      margin: 0;
    }

    @media (min-width: @medium-viewport) {
      .box-shadow();

      height: 500px;
      margin: @row-height * 0.4;
    }
  }
}

.wrapper() {
  width: 100%;
  padding: @menu-height 0;
  z-index: @map-popup-z-index;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
}


.static-wrapper {
  @media (max-width: (@medium-viewport - 1)) {
    .border-box();
    .wrapper();
  }
}


.interactive-wrapper {
  .border-box();
  .wrapper();

  @media (min-width: @medium-viewport) {
    padding: 0;
    position: absolute;
    top: 0;
    left: 0;
  }
}


@media (min-width: @medium-viewport) {
  .dimmer {
    content: '';
    width: 100vw;
    height: 100vh;
    background-color: @dimmer;
    position: fixed;
    left: 0;
    top: 0;
    z-index: @dimmer-z-index;
  }
}



// Search control stiles

.search-control {
  .box-shadow();

  width: 45%;
  height: 30px;
  max-width: 350px;
  margin-top: 12px;
  background-color: white;
  border-radius: 3px;

  @media (max-width: (@medium-viewport - 1)) {
    margin-left: -25%;
  }

  & .search-bar {
    .border-box();

    width: 77%;
    padding: 6px;
    border: none;
    border-radius: 3px;
    display: inline-block;

    @media (max-width: (@medium-viewport - 1)) {
      width: 100%;
    }
  }

  & .search-button {
    .border-box();

    width: 22%;
    padding: 7px;
    border-left: 1px solid @mild-base;
    text-align: center;
    font-size: 12px;
    cursor: pointer;

    @media (max-width: (@medium-viewport - 1)) {
      display: none;
    }

    @media (min-width: @medium-viewport) {
      display: inline-block;
    }
  }
}


// infowindow styles

.infowindow-button {
  .box-shadow();

  width: 75px;
  margin: 10px 5px;
  padding: 5px 10px;
  border: none;
  background-color: @dark-blue;
  color: @light-blue;
  cursor: pointer;
  outline: none;

  &:active {
    background-color: lighten(@dark-blue, 7%);
    box-shadow: none;
  }
}


.infowindow > div {
  min-width: 150px;
  max-width: 200px;
  margin-top: 5px;
}

.infowindow-title {
  font-size: 18px;
  margin-top: 10px;
  color: @link-color;
  text-decoration: underline;
  cursor: pointer;
}

